deploy: 5848750f330e811a1a4be6081a883d62af430aa9

--- a/lin_regression_notation.html
+++ b/lin_regression_notation.html
@@ -515,7 +515,7 @@ make the notation clear and digestible.</p>
 <p><em>Note</em>: it is very likely this page will be challenging. Do not worry if you do
 not understand some of the notation the first time you see it. In fact, we would
 be surprised if you did. You may need to revisit certain sections several times -
-but please rest assured that with perserverance things will make sense.</p>
+but please rest assured that with perseverance things will make sense.</p>
 <p>We believe that it is easier to understand statistical techniques when you know clearly
 what their purpose is - when you would use them, and why. With this in mind we will now
 briefly explain the purpose of statistical modelling, of which linear regression is one type.</p>
